<resources>
    <string name="app_name">Yakssok</string>
    <string name="GO_BACK">뒤로가기</string>
    <string name="GO_MAIN">메인으로</string>
    <string name="GO_NEXT">다음</string>
    <string name="GO_BACK_2">이전</string>
    <string name="GO_UP">맨 위로</string>
    <string name="GO_FIRST">처음으로</string>
    <string name="HINT_TITLE">제목이 들어갈 자리입니다.</string>
    <string name="HINT_NAME">이름이 들어갈 자리입니다.</string>
    <string name="HINT_CONTENTS">내용이 들어갈 자리입니다.</string>
    <string name="PILL_INGREDIENTS">성분/함량</string>
    <string name="PILL_COMPANY">회사정보</string>
    <string name="PILL_EFFECTS">효능/효과</string>
    <string name="PILL_DETAILS">세부정보</string>
    <string name="PILL_REVIEW_TITLE">한줄리뷰</string>
    <string name="BTN_WRITE">작성</string>
    <string name="HINT_REVIEW_CONTENTS">리뷰를 작성해주세요.</string>
    <string name="PILL_PERCENT">00 %</string>
    <string name="NICKNAME">닉네임</string>
    <string name="NAME">이름</string>
    <string name="TITLE">제목</string>
    <string name="DATE_EXAMPLE">19-01-01 24:24:24</string>
    <string name="CONTENTS">내용</string>
    <string name="SERVER_ADDRESS_STR">http://124.49.194.124:8181//Yakssok</string>
    <string name="BTN_GOOD">Good :)</string>
    <string name="BTN_BAD">Bad :(</string>
    <string name="REFRESH">새로고침</string>
    <string name="REFRESH_COORDS">위치갱신</string>
    <string name="D_NEARBY_TITLE">내 주변 약국</string>
    <string name="CHAT">채팅</string>
    <string name="X">X</string>
</resources>
