<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <ScrollView
        android:id="@+id/sv_pill_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_p_view_go_back"
                    style="@android:style/Widget.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/GO_BACK" />

            </LinearLayout>

            <ImageView
                android:id="@+id/img_p_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:srcCompat="@drawable/no_image" />

            <TextView
                android:id="@+id/str_p_view_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/HINT_NAME"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_p_view_state"
                    android:layout_width="63dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/none" />

                <TextView
                    android:id="@+id/str_p_view_percent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|start"
                    android:paddingLeft="20dp"
                    android:text="@string/PILL_PERCENT"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_p_view_ingredients"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PILL_INGREDIENTS" />

                <Button
                    android:id="@+id/btn_p_view_company"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PILL_COMPANY" />

                <Button
                    android:id="@+id/btn_p_view_effects"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PILL_EFFECTS" />

                <Button
                    android:id="@+id/btn_p_view_details"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/PILL_DETAILS" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/PILL_REVIEW_TITLE"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/str_p_review_write"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:ems="10"
                        android:hint="@string/HINT_REVIEW_CONTENTS"
                        android:inputType="textPersonName" />

                    <Button
                        android:id="@+id/btn_p_review_write"
                        style="@android:style/Widget.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.75"
                        android:text="@string/BTN_WRITE" />

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_p_view_go_up"
                        style="@android:style/Widget.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/GO_UP" />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>